--- a/auth/templates/order/index.html
+++ b/auth/templates/order/index.html
@@ -30,7 +30,7 @@
 
                 <tbody>
                     {% for instance in instances %}
-                    <tr data-id={{ instance.id }} class="order {{ instance.row_class }}">
+                    <tr data-id={{ instance.id }} class="order table-{{ instance.class_hint }}">
                         <td data-label="ID"><a href="{{ url_for('.order_edit', hash=instance.hash) }}">{{ instance }}</a></td>
                         {% if show_network or show_gateway %}
                         <td data-label="Network & Gateway">
@@ -49,38 +49,7 @@
                         <td data-label="Created At">{{ instance.created_at | datetimeformat('short') }}</td>
 
                         <td class="actions actions-instance">
-                            <div class="pure-menu pure-menu-horizontal">
-                                <ul class="pure-menu-list">
-                                    {% for action, defn in instance.available_actions.items() %}
-                                    {% if action == 'pay' %}
-                                        <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                                            <a href="#" class="pure-menu-link" title="{{ action }}">
-                                                {% if defn.icon %}
-                                                <span class="oi" data-glyph={{ defn.icon }} aria-hidden="true"></span>
-                                                {% endif %}
-                                                {{ action }}
-                                            </a>
-                                            <ul class="pure-menu-children">
-                                                {% for processor in instance.gateway.country.processors if processor.active %}
-                                                <li class="pure-menu-item">
-                                                    <a href="{{ url_for('.order_pay', hash=instance.hash, processor_id=processor.id) }}" class="pure-menu-link">{{ processor.title }}</a>
-                                                </li>
-                                                {% endfor %}
-                                            </ul>
-                                        </li>
-                                    {% else %}
-                                        <li class="pure-menu-item">
-                                            <a href="{{ url_for('.order_action', hash=instance.hash, action=action) }}" class="pure-menu-link" title="{{ action }}">
-                                                {% if defn.icon %}
-                                                <span class="oi" data-glyph={{ defn.icon }} aria-hidden="true"></span>
-                                                {% endif %}
-                                                {{ action }}
-                                            </a>
-                                        </li>
-                                    {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
+                            {% include 'shared/actions.html' %}
                         </td>
                     </tr>
                     {% endfor %}
