--- a/auth/templates/wifidog/login.html
+++ b/auth/templates/wifidog/login.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="content">
-        <p><strong>Note:</strong> A voucher give you Internet access on one device only.</p>
+        <p><strong>Note:</strong> A voucher gives you Internet access on one device only.</p>
 
         <form method="post" action="{{ url_for('.wifidog_login') }}" class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
