--- a/auth/templates/cashup/index.html
+++ b/auth/templates/cashup/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="content">
-        {% if instances %}
+        {% if pagination.items %}
             <table id="cashups" width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
                 <thead>
                     <tr>
@@ -25,7 +25,7 @@
                 </thead>
 
                 <tbody>
-                    {% for instance in instances %}
+                    {% for instance in pagination.items %}
                     <tr data-id={{ instance.id }} class="cashup {{ 'pure-table-' + loop.cycle('odd', 'even') }}">
                         <td data-label="ID"><a href="{{ url_for('.cashup_show', id=instance.id) }}">{{ instance }}</a></td>
                         {% if show_gateway %}
