--- a/auth/templates/gateway/index.html
+++ b/auth/templates/gateway/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="content">
-        {% if instances %}
+        {% if pagination.items %}
             <table width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
                 <thead>
                     <tr>
@@ -24,7 +24,7 @@
                 </thead>
 
                 <tbody>
-                    {% for instance in instances %}
+                    {% for instance in pagination.items %}
                         <tr data-id={{ instance.id }} class={{ 'pure-table-' + loop.cycle('odd', 'even') }}>
                             {% if show_network %}
                                 <td data-label="Network">{{ instance.network | default('-') }}</td>
