--- a/auth/templates/order/index.html
+++ b/auth/templates/order/index.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/default.html' %}
+{% from 'helpers/render.html' import render_pagination %}
 
 {% set page_title = 'Orders' %}
 {% set new_title = 'New Order' %}
@@ -9,7 +10,7 @@
 
 {% block content %}
     <div class="content">
-        {% if instances %}
+        {% if pagination.items %}
             <table id="orders" width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
                 <thead>
                     <tr>
@@ -29,7 +30,7 @@
                 </thead>
 
                 <tbody>
-                    {% for instance in instances %}
+                    {% for instance in pagination.items %}
                     <tr data-id={{ instance.id }} class="order table-{{ instance.class_hint }}">
                         <td data-label="ID"><a href="{{ url_for('.order_edit', hash=instance.hash) }}">{{ instance }}</a></td>
                         {% if show_network or show_gateway %}
@@ -55,6 +56,8 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            {{ render_pagination(pagination, '.order_index') }}
         {% endif %}
     </div>
 {% endblock %}
