--- a/auth/templates/category/_form.html
+++ b/auth/templates/category/_form.html
@@ -15,6 +15,7 @@
     {{ group(form.code) }}
     {{ group(form.title) }}
     {{ group(form.description) }}
+    {{ group(form.properties) }}
 
     <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Ok</button>
