--- a/auth/templates/product/_form.html
+++ b/auth/templates/product/_form.html
@@ -5,19 +5,25 @@
 
 <fieldset>
     {% if show_network %}
-        {{ group(form.network) }}
+        {{ group(form.network, disabled=True, readonly=True) }}
     {% endif %}
 
     {% if show_gateway %}
-        {{ group(form.gateway) }}
+        {{ group(form.gateway, disabled=True, readonly=True) }}
     {% endif %}
 
-    {{ group(form.category) }}
+    {{ group(form.category, disabled=True, readonly=True) }}
 
     {{ group(form.code) }}
     {{ group(form.title) }}
     {{ group(form.description) }}
     {{ group(form.price) }}
+
+    {% if category.properties %}
+    {% for name in category.properties.split('\n') %}
+    {{ group(form[name], label='Jam') }}
+    {% endfor %}
+    {% endif %}
 
     <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Ok</button>
