--- a/auth/templates/layouts/gtm_body.html
+++ b/auth/templates/layouts/gtm_body.html
@@ -1,3 +1,4 @@
+{% if config['GTM_CONTAINER_ID'] %}
 <noscript>
     <iframe
         src="https://www.googletagmanager.com/ns.html?id={{ config['GTM_CONTAINER_ID'] }}"
@@ -7,4 +8,4 @@
     >
     </iframe>
 </noscript>
-
+{% endif %}
