--- a/auth/templates/error.html
+++ b/auth/templates/error.html
@@ -1,10 +1,10 @@
 {% extends 'layouts/default.html' %}
 
-{% set page_title = 'Not Found' %}
-
 {% block content %}
 <div class="content">
-    <h1>404</h1>
-    <p>We can't seem to find the page you're looking for.</p>
+    <p>{{ description }}</p>
+    {% if error_description %}
+    <p><em>{{ error_description }}</em></p>
+    {% endif %}
 </div>
 {% endblock %}
