--- a/auth/templates/product/new.html
+++ b/auth/templates/product/new.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.product_new') }} class="pure-form pure-form-aligned">
+        <form method="post" action={{ action_url }} class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
             {% include 'product/_form.html' %}
         </form>
