--- a/auth/templates/gateway/_form.html
+++ b/auth/templates/gateway/_form.html
@@ -30,6 +30,10 @@
     {{ group(form.url_home) }}
     {{ group(form.url_facebook) }}
 
+    {{ group(form.vat_number) }}
+    {{ group(form.business_name) }}
+    {{ group(form.business_address) }}
+
     {{ group(form.login_ask_name) }}
     {{ group(form.login_require_name) }}
 
