--- a/auth/templates/product/_form.html
+++ b/auth/templates/product/_form.html
@@ -27,6 +27,7 @@
 
     {{ group(form.code) }}
     {{ group(form.title) }}
+    {{ group(form.unit) }}
     {{ group(form.description) }}
     {{ group(form.price) }}
     {{ group(form.vat_rate) }}
