--- a/auth/templates/transaction/index.html
+++ b/auth/templates/transaction/index.html
@@ -35,11 +35,11 @@
                         {% if show_network or show_gateway %}
                         <td data-label="Network & Gateway">
                             {% if show_network %}
-                            {{ instance.order.network }}
+                            {{ instance.order.network or '' }}
                             {% endif %}
                             {% if show_gateway %}
                                 {% if show_network %}<br />{% endif %}
-                                {{ instance.order.gateway }}
+                                {{ instance.order.gateway or '' }}
                             {% endif %}
                         </td>
                         {% endif %}
