--- a/auth/templates/voucher/index.html
+++ b/auth/templates/voucher/index.html
@@ -4,12 +4,20 @@
 {% set new_title = 'New Voucher' %}
 {% set new_url = '/new-voucher' %}
 
+{% set show_network = current_user.has_role('super-admin') %}
+{% set show_gateway = current_user.has_role('super-admin') or current_user.has_role('network-admin') %}
+
 {% block content %}
     <div class="content">
         {% if pagination.items %}
             <table id="vouchers" width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
                 <thead>
                     <tr>
+                        {% if show_network or show_gateway %}
+                        <th>
+                            Network &amp; Gateway
+                        </th>
+                        {% endif %}
                         <th>Code</th>
                         <th>Name</th>
                         <th>S</th>
@@ -23,7 +31,18 @@
 
                 <tbody>
                     {% for instance in pagination.items %}
-                    <tr data-id="{{ instance.id }}" data-code="{{ instance.code }}" class="voucher table-{{ instance.class_hint }}">
+                        <tr data-id="{{ instance.id }}" data-code="{{ instance.code }}" class="voucher table-{{ instance.class_hint }}">
+                            {% if show_network or show_gateway %}
+                            <td data-label="Network & Gateway">
+                                {% if show_network %}
+                                {{ instance.gateway.network }}
+                                {% endif %}
+                                {% if show_gateway %}
+                                    {% if show_network %}<br />{% endif %}
+                                    {{ instance.gateway }}
+                                {% endif %}
+                            </td>
+                            {% endif %}
                             <td class="code" data-label="Code">{{ instance.code }}</td>
                             <td class="name" data-label="Name">{{ instance.name or '-' }}</td>
                             <td class="status" data-label="Status"><span class="oi" data-glyph={{ constants.STATUS_ICONS[instance.status] }} title={{ instance.status }} aria-hidden="true"></span></td>
