--- a/auth/templates/gateway/_form.html
+++ b/auth/templates/gateway/_form.html
@@ -2,46 +2,54 @@
 
 {{ form.csrf_token }}
 
-<fieldset>
-    {{ group(form.network) }}
+<div class="tabs">
+    <div class="tabs-tab" data-title="Main">
+        {{ group(form.network) }}
+        {{ group(form.gateway_type) }}
+        {{ group(form.id) }}
+        {{ group(form.title) }}
+        {{ group(form.subtitle) }}
+        {{ group(form.description) }}
 
-    {{ group(form.id) }}
-    {{ group(form.title) }}
-    {{ group(form.subtitle) }}
-    {{ group(form.description) }}
-    {{ group(form.country) }}
+        {% if logos and form.logo.data %}
+            <div class="pure-controls">
+                <img src="{{ logos.url(form.logo.data) }}" />
+            </div>
+        {% endif %}
 
-    {% if logos and form.logo.data %}
-        <div class="pure-controls">
-            <img src="{{ logos.url(form.logo.data) }}" />
-        </div>
-    {% endif %}
-
-    {{ group(form.logo) }}
-
-    {{ group(form.contact_email) }}
-    {{ group(form.contact_phone) }}
-
-    {{ group(form.public_email) }}
-    {{ group(form.public_phone) }}
-
-    {{ group(form.support_email) }}
-
-    {{ group(form.url_home) }}
-    {{ group(form.url_facebook) }}
-
-    {{ group(form.vat_number) }}
-    {{ group(form.business_name) }}
-    {{ group(form.business_address) }}
-
-    {{ group(form.login_ask_name) }}
-    {{ group(form.login_require_name) }}
-
-    {{ group(form.default_minutes) }}
-    {{ group(form.default_megabytes) }}
-
-    <div class="pure-controls">
-        <button type="submit" class="pure-button pure-button-primary">Ok</button>
-        <button type="button" class="pure-button" onclick="history.back()">Cancel</button>
+        {{ group(form.logo) }}
     </div>
-</fieldset>
+
+    <div class="tabs-tab" data-title="Location">
+        {{ group(form.country) }}
+        {{ group(form.url_map) }}
+    </div>
+
+    <div class="tabs-tab" data-title="Contact">
+        {{ group(form.contact_email) }}
+        {{ group(form.contact_phone) }}
+        {{ group(form.public_email) }}
+        {{ group(form.public_phone) }}
+        {{ group(form.support_email) }}
+        {{ group(form.url_home) }}
+        {{ group(form.url_facebook) }}
+    </div>
+
+    <div class="tabs-tab" data-title="Sales">
+        {{ group(form.vat_number) }}
+        {{ group(form.business_name) }}
+        {{ group(form.business_address) }}
+    </div>
+
+    <div class="tabs-tab" data-title="Vouchers">
+        {{ group(form.login_ask_name) }}
+        {{ group(form.login_require_name) }}
+        {{ group(form.default_minutes) }}
+        {{ group(form.default_megabytes) }}
+    </div>
+</div>
+
+<div class="pure-controls">
+    <button type="submit" class="pure-button pure-button-primary">Ok</button>
+    <button type="button" class="pure-button" onclick="history.back()">Cancel</button>
+</div>
