--- a/auth/assets/styles/site.scss
+++ b/auth/assets/styles/site.scss
@@ -88,7 +88,7 @@ th, td {
     margin: 0 0 10px 7.5em;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 35.5em) {
     .voucher-id {
         margin: 0 0 10px;
     }
@@ -507,4 +507,8 @@ table-warning,
 .table-hover .table-warning:hover > td,
 .table-hover .table-warning:hover > th {
     background-color: #ffe8a1;
+}
+
+legend {
+    font-size: x-large;
 }
