--- a/auth/templates/order/edit.html
+++ b/auth/templates/order/edit.html
@@ -40,7 +40,7 @@
                 <div class="pure-u-1-3 submit">
                     <button
                         type="submit"
-                        class="pure-button pure-button-secondary"
+                        class="pure-button"
                         name="action"
                         value="remove"
                     >
