--- a/auth/templates/user/index.html
+++ b/auth/templates/user/index.html
@@ -31,11 +31,11 @@
                             {% if show_network or show_gateway %}
                             <td data-label="Network & Gateway">
                                 {% if show_network %}
-                                {{ instance.network }}
+                                {{ instance.network or '' }}
                                 {% endif %}
                                 {% if show_gateway %}
                                     {% if show_network %}<br />{% endif %}
-                                    {{ instance.gateway }}
+                                    {{ instance.gateway or '' }}
                                 {% endif %}
                             </td>
                             {% endif %}
