--- a/auth/templates/order/edit.html
+++ b/auth/templates/order/edit.html
@@ -6,68 +6,61 @@
 
 {% block content %}
     <div class="order-edit content">
-        <form method="post" action="{{ url_for('.order_edit', hash=order.hash) }}" class="order-item pure-form pure-g">
-            {{ order_form.csrf_token }}
-
-            {% if show_gateway %}
-                <div class="pure-u-1">
-                    {{ order_form.gateway }}
-                </div>
-            {% endif %}
-            <div class="pure-u-1 product">
-                {{ order_form.product }}
-            </div>
-            <div class="pure-u-1-3 quantity">
-                {{ order_form.quantity(type='number', min=1) }}
-            </div>
-            <div class="pure-u-1-3 price">
-                {{ order_form.price(type='number', min=0.01, step=0.01) }}
-            </div>
-            <div class="pure-u-1-3 submit">
-                <button type="submit" class="pure-button pure-button-primary">
-                    Add
-                </button>
-            </div>
+        <form method="post" action="{{ url_for('.order_edit', hash=order.hash) }}" class="order-item pure-form pure-form-aligned">
+            {% include 'order/_form.html' %}
         </form>
 
         <hr class="divider" />
 
-        {% for item in order.items %}
-            <form method="post" action="{{ url_for('.order_item_edit', hash=order.hash, item_id=item.id) }}" class="order-item pure-form pure-g">
-                <div class="pure-u-2-3 product">
-                    {{ order_form.product(value=item.product) }}
-                </div>
-                <div class="pure-u-1-3 submit">
-                    <button
-                        type="submit"
-                        class="pure-button"
-                        name="action"
-                        value="remove"
-                    >
-                        Remove
-                    </button>
-                </div>
-                <div class="pure-u-1-3 quantity">
-                    {{ order_form.quantity(type='number', min=1, value=item.quantity) }}
-                </div>
-                <div class="pure-u-1-3 price">
-                    {{ order_form.price(type='number', min=0.01, step=0.01, value='%.2f' % item.price) }}
-                </div>
-                <div class="pure-u-1-3 submit">
-                    <button type="submit" class="pure-button pure-button-primary"
-                        name="action"
-                        value="save">
-                        Save
-                    </button>
-                </div>
-            </form>
-        {% endfor %}
-
-        <h3>
-            Total: {{ render_currency_amount(order.network.currency, order.total_amount) }}
-        </h3>
-        </div>
-    </div>
+        <table id="order-items" style="width: 100%">
+            <thead>
+                <tr>
+                    <th style="text-align: left">Product</th>
+                    <th style="text-align: right">Quantity</th>
+                    <th style="text-align: right">Price</th>
+                    <th style="text-align: right">Unit</th>
+                    <th style="text-align: right">Total</th>
+                    <th style="text-align: right">Actions</th>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in order.items %}
+                <tr>
+                    <td style="text-align: left">{{ item.product.title }}</td>
+                    <td style="text-align: right">{{ item.quantity }}</td>
+                    <td style="text-align: right">{{ render_currency_amount(order.network.currency, item.price) }}</td>
+                    <td style="text-align: right">{{ item.unit }}</td>
+                    <td style="text-align: right">{{ render_currency_amount(order.network.currency, item.total_amount) }}</td>
+                    <td style="text-align: right"></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3" />
+                    <td style="text-align: right">
+                        <strong>VAT</strong>
+                    </td>
+                    <td style="text-align: right">
+                        {{ render_currency_amount(order.network.currency, order.vat_amount) }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="3" />
+                    <td style="text-align: right">
+                        <strong>Total</strong>
+                    </td>
+                    <td style="text-align: right">
+                        {{ render_currency_amount(order.network.currency, order.total_amount) }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 {% endblock %}
 
 {% block scripts %}
