--- a/auth/templates/order/new.html
+++ b/auth/templates/order/new.html
@@ -6,28 +6,8 @@
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.order_new') }} class="order-item pure-form pure-g">
-            {{ order_form.csrf_token }}
-
-            {% if show_gateway %}
-                <div class="pure-u-1">
-                    {{ order_form.gateway }}
-                </div>
-            {% endif %}
-            <div class="pure-u-1 product">
-                {{ order_form.product }}
-            </div>
-            <div class="pure-u-1-3 quantity">
-                {{ order_form.quantity(type='number', min=1) }}
-            </div>
-            <div class="pure-u-1-3 price">
-                {{ order_form.price(type='number', min=0.01, step=0.01) }}
-            </div>
-            <div class="pure-u-1-3 submit">
-                <button type="submit" class="pure-button pure-button-primary">
-                    Add
-                </button>
-            </div>
+        <form method="post" action={{ url_for('.order_new') }} class="order-item pure-form pure-form-aligned">
+            {% include 'order/_form.html' %}
         </form>
     </div>
 {% endblock %}
