--- a/auth/templates/order/edit.html
+++ b/auth/templates/order/edit.html
@@ -10,6 +10,7 @@
             {% include 'order/_form.html' %}
         </form>
 
+        {% if order.items.count() %}
         <hr class="divider" />
 
         <table id="order-items" width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
@@ -20,7 +21,7 @@
                     <th style="text-align: right">Price</th>
                     <th style="text-align: right">Unit</th>
                     <th style="text-align: right">Total</th>
-                    <th>Actions</th>
+                    <th class="actions">Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -31,7 +32,18 @@
                     <td data-label="Price" style="text-align: right">{{ render_currency_amount(order.network.currency, item.price) }}</td>
                     <td data-label="Unit" style="text-align: right">{{ item.unit or '-' }}</td>
                     <td data-label="Total" style="text-align: right">{{ render_currency_amount(order.network.currency, item.total_amount) }}</td>
-                    <td class="actions actions-instance"></td>
+                    <td class="actions actions-instance">
+                        <div class="pure-button-group" role="group" aria-label="Actions Available">
+                            {% for action, defn in item.available_actions.items() %}
+                            <a href="{{ url_for('.order_item_action', id=item.id, action=action) }}" class="pure-button" title="{{ action }}">
+                                {% if defn.icon %}
+                                <span class="oi" data-glyph={{ defn.icon }} aria-hidden="true"></span>
+                                {% endif %}
+                                {{ action }}
+                            </a>
+                            {% endfor %}
+                        </div>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -60,6 +72,7 @@
                 </tr>
             </tbody>
         </table>
+        {% endif %}
 {% endblock %}
 
 {% block scripts %}
